fixed about me section being too wide

--- a/src/Pages/AboutPage/AboutPage.scss
+++ b/src/Pages/AboutPage/AboutPage.scss
@@ -4,12 +4,8 @@
 .about-page {
     padding-top: 2rem;
     color: $text-color-secondary;
-    min-height: 70vh;
-    display: flex;
-    flex: 0 1 auto;
-    flex-direction: column;
+    min-height: 80vh;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-    justify-content: center;
 
     @include breakpoint-small-down {
         padding-top: 3rem;
